Added subscription add-on option for xcube-gen BYOA
